# Tools-backup

./: .gitignore  README.MD  README.md  aliases.sh  devices_mac_adress.conf  devices_mac_adress.txt  keybindings.json  stuff_to_restore.txt
aliases/: aliases.bash  aliases.fish  config.fish  tmux.conf
aruco/: utils.py
astroNvim/user/: mappings.lua
camera calibration/calib/: webcam.yaml
camera calibration/calib_from_img_dir/: .gitignore  CMakeLists.txt  cameraCalib.cpp  config.json
camera calibration/tello_frame_collection/: tello_frame_collection.py
camera_calibration/calib_from_img_dir/: cameraCalib.cpp
chroot/: chroot-to-pi.sh  internal_rpi_emu.md  raspberry-pi-chroot-armv7-qemu.md
chroot/chroot-runner/: chrootRunner.sh
install_scripts/: reinstall_fish.bash  reinstall_fish_plugins.bash  reinstall_fish_plugins.fish
keebs/: v1_0.json  v1_1.json  v1_2.json
rbd_tools/: devices_mac_adress.conf
rbd_tools/camera_calibration/: README.md  calibwebcam.yaml
rbd_tools/camera_calibration/calib_from_img_dir/: CMakeLists.txt
rbd_tools/tello/: start_cam.py
ros_dev/docker/: novnc.fish  run_myros_docker.fish  run_ros_docker.fish
rpi-tools/: README.md  aliases.sh  client_ips.txt  client_ips_rpi.txt  sshServer.py  tmux-sendall  tmux_script.sh
rpi-tools/ipServer/: clientRuner.sh
rpi-tools/new_ssh_server/: bashrc_extention.sh  client.py  server.py
rpi-tools/old_ssh_server/: sshClient.py  tmux_script.sh
rpi-tools/sshServer_boot/: bashrc_extension.sh
ssh_automation/: sshServer.py  ssh_sshfs.sh
tello/: ap_connect.py  start_cam.py
test/: bashtest.sh
(+14 files in other folders)
